# pico-freertos-test

./: .gitignore  CMakeLists.txt  README.md  freertos_rp2040_import.cmake
scripts/: deploy.sh  flash.sh  functions.cmake
src/apps/: CMakeLists.txt
src/apps/blink/: CMakeLists.txt
src/apps/blinks-morze/: CMakeLists.txt
src/apps/bootsel/: CMakeLists.txt  bootsel.cpp  bootsel.h  main.cpp
src/apps/multicore/: CMakeLists.txt  main.cpp
src/apps/picow-blink/: CMakeLists.txt  main.cpp
src/apps/picow-bt-dualsense-hid/: CMakeLists.txt  main.cpp
src/apps/picow-bt-dualsense-hid/config/: btstack_config.h
src/apps/picow-bt-dualsense-l2cap/: CMakeLists.txt  main.cpp
src/apps/picow-sntp/: CMakeLists.txt  main.cpp
src/apps/picow-wifi-sntp/: CMakeLists.txt  lwipopts.h  main.cpp
src/blink/: main.cpp
src/blinks-morze/: CMakeLists.txt  main.cpp
src/bootsel/: CMakeLists.txt  bootsel.cpp
src/config/: FreeRTOSConfig.h  lwipopts_examples_common.h
src/utils/: CMakeLists.txt
src/utils/DualSense/: DualSense.h
src/utils/task-blink-sos/: CMakeLists.txt  task-blink-sos.cpp  task-blink-sos.h
src/utils/task-bootsel-pool/: CMakeLists.txt  task-bootsel-pool.cpp  task-bootsel-pool.h
